Accept only name in legacy parsers